--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+.footer {
+  margin-top: 1rem;
+  padding: 1rem;
+  background-color: rgb(55, 69, 145);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  color: white;
+  font-size: 0.8rem;
+}
+
+.header {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  top: 0;
+  background-color: rgb(55, 69, 145);
+  width: 100%;
+  color: white;
+}
